<resources>
    <string name="app_name">Notify</string>
    <string name="title_activity_main">Notify</string>
    <string name="title_activity_application_picker">Choose Application</string>
    <string name="title_activity_intro">Welcome to Notify</string>

    <string name="welcome_intro">Welcome to Notify! With Notify, your LIFX bulb will flash whenever you get a new notification. To get started, swipe.</string>
    <string name="preference_category_permissions">Permissions</string>
    <string name="preference_api_key">API Key</string>
    <string name="preference_api_key_detail">Change the LIFX API Key used to control your LIFX bulbs</string>
    <string name="preference_nrp">Notification Read Privileges</string>
    <string name="preference_nrp_detail">Allow Notify to know when you receive a new notification</string>
    <string name="preference_category_customization">Customization</string>
    <string name="preference_app_colors">App Preferences</string>
    <string name="preference_app_colors_detail">Change specific app configurations</string>
    <string name="preference_cycles">Pulse Cycles</string>
    <string name="preference_cycles_detail">Change how many pulse cycles are used when you receive a notification</string>
    <string name="preference_color_wheel">Use the old color picker</string>
    <string name="preference_color_wheel_detail">This feature is no longer supported and may disappear in future releases</string>
    <string name="preference_pulse">Pulse Type</string>
    <string name="preference_priority">Minimum Notification Priority</string>

    <string name="priv_intro">Now, let\'s enable Notification Read Privileges for Notify. Below tap the Read Privileges button and check the box next to Notify.</string>
    <string name="apikey_intro">First, enter your LIFX API key so we can control your LIFX bulbs. If you don\'t have an API key, you can get one at cloud.lifx.com/settings.</string>
    <string name="finished_intro">Great job! You\'re done. You can modify these settings at any time by coming back to the app. Other features like App Specific Coloring can also be enabled by coming back to the app.</string>
    <string name="setup_dialog">Actual colors displayed on LIFX bulbs may vary.</string>
    <string name="setup_incomplete_dialog">The setup was not completed successfully. Please make sure you enabled Notification Read Privileges for Notify and entered a valid API key.</string>

    <string name="button_1">Save API Key</string>
    <string name="button_2">Read Privileges</string>
    <string name="button_3">Change Notification Preferences</string>
    <string name="button_4">Finish</string>
    <string name="button_5">Edit Cycles</string>
    <string name="apikey_input">API Key</string>

    <string name="color_1">Notify Purple (#9A2EFE)</string>
    <string name="color_2">Hangouts Green (#1BA260)</string>
    <string name="color_3">Gmail Red (#D44638)</string>
    <string name="color_4">Facebook Blue (#3B5998)</string>
    <string name="color_5">Snapchat Yellow (#FFFC00)</string>
    <string name="color_6">Orange (#FFB300)</string>
    <string name="color_7">Vine Green (#00A478)</string>
    <string name="color_8">Twitter Blue (#00ACED)</string>
    <string name="color_9">Instagram Blue (#517FA4)</string>

    <string name="cycles_dialog_title">Change Pulse Cycles</string>
    <string name="setup_incomplete_dialog_title">Setup Incomplete</string>
    <string name="auto">Auto-select color based on app icon</string>
    <string name="setup_dialog_title">Edit App Configurations</string>
    <string name="action_settings">Settings</string>
    <string name="action_intro">Introduction</string>
    <string name="action_about">About</string>
    <string name="action_notification">Create Test Notification</string>
    <string name="lights">Lights</string>

    <string name="about">
        &lt;b&gt;Open Source Licenses&lt;/b&gt;
        &lt;br /&gt;
        &lt;br /&gt;
        &lt;br /&gt;
        &lt;b&gt;App Icon&lt;/b&gt;
        &lt;br /&gt;
        &lt;br /&gt;
    The app icon was generated by Android Asset Studio, licensed under CC BY 3.0
        &lt;br /&gt;
    https://creativecommons.org/licenses/by/3.0/
        &lt;br /&gt;
        &lt;br /&gt;
        &lt;br /&gt;
    &lt;b&gt;Lobsterpicker&lt;/b&gt;
        &lt;br /&gt;
        &lt;br /&gt;
        Copyright 2016 Marie Schweiz and Lars Werkman
        &lt;br /&gt;
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
        &lt;br /&gt;
        &lt;br /&gt;
     http://www.apache.org/licenses/LICENSE-2.0
        &lt;br /&gt;
        &lt;br /&gt;
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
        &lt;br /&gt;
        &lt;br /&gt;
        &lt;br /&gt;
    &lt;b&gt;Android Open Source Project&lt;/b&gt;
        &lt;br /&gt;
        &lt;br /&gt;
    Copyright 2016 The Android Open Source Project
        &lt;br /&gt;
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
        &lt;br /&gt;
        &lt;br /&gt;
    http://www.apache.org/licenses/LICENSE-2.0
        &lt;br /&gt;
        &lt;br /&gt;
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
        &lt;br /&gt;
        &lt;br /&gt;
        &lt;br /&gt;
        &lt;b&gt;About App&lt;/b&gt;
        &lt;br /&gt;
        &lt;br /&gt;
        &lt;br /&gt;
        App designed and developed by Brigham B., a 13 year-old app developer.
        &lt;br /&gt;
        © 2016 Brigham Byerly
    </string>

    <string-array name="pulse">
        <item>Breath</item>
        <item>Flash</item>
    </string-array>

    <string-array name="priorities">
        <item>Lowest</item>
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
        <item>Highest</item>
    </string-array>

    <string-array name="priorityValues">
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
