<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_margin">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/color_options"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/color_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/color_1" />

            <RadioButton
                android:id="@+id/color_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_2" />

            <RadioButton
                android:id="@+id/color_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_3" />

            <RadioButton
                android:id="@+id/color_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_4" />

            <RadioButton
                android:id="@+id/color_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_5" />

            <RadioButton
                android:id="@+id/color_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_6" />

            <RadioButton
                android:id="@+id/color_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_7" />

            <RadioButton
                android:id="@+id/color_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_8" />

            <RadioButton
                android:id="@+id/color_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_9" />

        </RadioGroup>
    </LinearLayout>
</ScrollView>