<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/transparent"
    android:gravity="center">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="300dp"
        card_view:contentPadding="@dimen/activity_intro_cardview"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apikey_intro"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/apikey_intro"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/step_1_input"
                android:hint="@string/apikey_input"
                android:layout_below="@+id/apikey_intro" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_1"
                android:id="@+id/step_1_button"
                android:onClick="saveKey"
                android:layout_alignParentBottom="true"
                android:layout_alignEnd="@+id/step_1_input" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>